# MotionCtrl

./: .gitignore  LICENSE  README.md
cpp/: README.md
cpp/Atlas/: CMakeLists.txt  main.cpp
cpp/Atlas/RobotModel/: atlas_v3_no_head.urdf  ground.urdf
cpp/Atlas/WorldNode/: atlas_worldnode.cpp  atlas_worldnode.hpp
cpp/CollisionExample/: CMakeLists.txt  controller.hpp  main.cpp
cpp/CollisionExample/RobotModel/: box.urdf  ground.urdf
cpp/CollisionExample/WorldNode/: col_worldnode.cpp  col_worldnode.hpp
cpp/Draco/: CMakeLists.txt  main.cpp
cpp/Draco/RobotModel/: draco.urdf  mk_draco.urdf
cpp/Draco/RobotModel/meshes/: foot.STL
cpp/Draco/WorldNode/: draco_worldnode.hpp
cpp/KR5/: CMakeLists.txt  main.cpp
cpp/KR5/RobotModel/: KR.urdf  ground.urdf
cpp/KR5/WorldNode/: kr_worldnode.cpp  kr_worldnode.hpp
cpp/TwoLinkManipulator/: CMakeLists.txt  README.md  main.cpp  mywindow.cpp
cpp/TwoLinkManipulator/ControlSet/: jpos_controller.cpp
cpp/TwoLinkManipulator/TaskSet/: jpos_task.cpp
cpp/TwoLinkage/: controller.cpp  controller.hpp  main.cpp  mywindow.hpp  task.hpp
cpp/TwoLinkage/ControlSet/: jpos_controller.hpp
cpp/TwoLinkage/TaskSet/: jpos_task.hpp
cpp/Valkyrie/: CMakeLists.txt
cpp/Valkyrie/Controller/: CMakeLists.txt  Interface.cpp  Interface.hpp  RobotModel.cpp  RobotModel.hpp  StateEstimator.cpp  StateEstimator.hpp  StateProvider.cpp  StateProvider.hpp
cpp/Valkyrie/Simulator/: CMakeLists.txt  main.cpp  valkyrie_worldnode.cpp  valkyrie_worldnode.hpp
cpp/operationalSpaceControl/: CMakeLists.txt  Main.cpp
cpp/osgOperationalSpaceControl/: CMakeLists.txt  osgOperationalSpaceControl.cpp
cpp/twoLinkage/: CMakeLists.txt  README.md
cpp/twoLinkage/Controller/: CMakeLists.txt  main.cpp
python/: main.py  test.py
python/agent/: Parking.py  agent.py
python/motionctrl/: main.py  test.py
python/motionctrl/agent/: agent.py  config.py  parking.py
python/motionctrl/algorithm/: boxqp.py
python/motionctrl/algorithm/traj_opt/: ilqr.py
python/motionctrl/utility/: general_utils.py
